dep-crds/training-operator/manifests/base/webhook/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-kubeflow-org-v1-jaxjob
  failurePolicy: Fail
  name: validator.jaxjob.training-operator.kubeflow.org
  rules:
  - apiGroups:
    - kubeflow.org
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - jaxjobs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-kubeflow-org-v1-paddlejob
  failurePolicy: Fail
  name: validator.paddlejob.training-operator.kubeflow.org
  rules:
  - apiGroups:
    - kubeflow.org
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - paddlejobs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-kubeflow-org-v1-pytorchjob
  failurePolicy: Fail
  name: validator.pytorchjob.training-operator.kubeflow.org
  rules:
  - apiGroups:
    - kubeflow.org
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pytorchjobs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-kubeflow-org-v1-tfjob
  failurePolicy: Fail
  name: validator.tfjob.training-operator.kubeflow.org
  rules:
  - apiGroups:
    - kubeflow.org
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - tfjobs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-kubeflow-org-v1-xgboostjob
  failurePolicy: Fail
  name: validator.xgboostjob.training-operator.kubeflow.org
  rules:
  - apiGroups:
    - kubeflow.org
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - xgboostjobs
  sideEffects: None
